added basic todo routes and additional services
